stderr
JudgeMan.java:75: error: duplicate case label
            case 3:
            ^
1 error
